# ourios

./: .bestpractices.json  .dockerignore  .gitignore  ADOPTERS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.static  MAINTAINERS.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  book.toml  cliff.toml  codecov.yml  committed.toml  coverage.json  deny.toml  dist-workspace.toml  dogfood-config.yaml  justfile  osv-scanner.toml  rust-toolchain.toml
crates/ourios-bench/: Cargo.toml
crates/ourios-bench/benches/: b1.rs  b2.rs  compaction.rs  ingest_write_path.rs  recovery.rs
crates/ourios-bench/proptest-regressions/: comparative.txt
crates/ourios-bench/src/: a1.rs  c1.rs  c2.rs  calibrate.rs  comparative.rs  corpus.rs  harness.rs  lgates.rs  lib.rs  main.rs  reference.rs  report.rs  soak.rs  store.rs
crates/ourios-bench/tests/: a1.rs  c1.rs  c2.rs  reproducibility.rs  rfc0024_calibration.rs  rfc0031_comparative.rs  rfc0036_realcorpus.rs
crates/ourios-bench/tests/rfc0031_comparative/: harness.rs  interop.rs  loki.rs  main.rs  picker_tests.rs  pickers.rs
crates/ourios-config/: Cargo.toml
crates/ourios-config/src/: lib.rs
crates/ourios-core/: Cargo.toml
crates/ourios-core/src/: alias.rs  audit.rs  auth.rs  clock.rs  confidence.rs  config.rs  lib.rs  otlp.rs  record.rs  tenant.rs
crates/ourios-core/src/auth/: mod.rs  oidc.rs
crates/ourios-core/testdata/: rfc0029-test-rsa.pem
crates/ourios-core/tests/: rfc0001_alias.rs  rfc0017_audit.rs  rfc0018_otlp_compliance.rs
crates/ourios-ingester/: Cargo.toml
crates/ourios-ingester/src/: audit_sink.rs  compactor.rs  encode_pool.rs  lib.rs  metrics.rs  publish.rs  receiver.rs  record_sink.rs  recovery.rs  snapshot_store.rs
crates/ourios-ingester/src/receiver/: auth.rs  commit.rs  decode.rs  grpc.rs  http.rs  materialize.rs  pipeline.rs  propagation.rs  tenant.rs  tls.rs  tls_serve.rs
crates/ourios-ingester/tests/: README.md  audit_sink_metrics.rs  http_transport_errors.rs  invariant_3_7_3_tenant_per_resource_logs.rs  perf_metrics.rs  rfc0001_3_5_snapshot_restore.rs  rfc0003_10_dropped_attributes_count.rs  rfc0003_11_transport_errors.rs  rfc0003_12_empty_request_success.rs  rfc0003_13_compression.rs  rfc0003_14_path_config.rs  rfc0003_15_concurrent_wal_before_ack.rs  rfc0003_1_wal_before_ack.rs  rfc0003_2_crash_before_ack.rs  rfc0003_3_tenant_fanout.rs  rfc0003_4_tenant_resolution_failure.rs  rfc0003_5_grpc_http_protobuf_equivalence.rs  rfc0003_6_json_protobuf_equivalence.rs  rfc0003_7_body_structured_verbatim.rs  rfc0003_8_body_string_lraw.rs  rfc0003_9_edge_otlp_fields.rs  rfc0008_10_rotation_cadence.rs  rfc0008_8_batched_fsync.rs  rfc0008_8_ingest_order.rs  rfc0014_5_crash_no_loss.rs  rfc0014_ingest_write_path.rs  rfc0018_otlp_compliance.rs  rfc0018_retryable.rs  rfc0022_promoted_threading.rs  rfc0023_overflow_roundtrip.rs  rfc0025_quarantine.rs  rfc0026_auth.rs  rfc0026_telemetry.rs  rfc0038_3_spawn_boundary.rs
crates/ourios-ingester/tests/fixtures/: receiver_crash_fixture.rs  receiver_sink_crash_fixture.rs
crates/ourios-miner/: Cargo.toml
crates/ourios-miner/src/: cluster.rs  lib.rs  mask.rs  metrics.rs  overflow.rs  reconstruct.rs  sim_seq.rs  snapshot.rs  tokenize.rs  tree.rs
crates/ourios-miner/tests/: README.md  hazards.rs  invariants.rs  rfc0004_configuration_policy.rs  rfc0017_template_created.rs  rfc0023_bounded_memory.rs  rfc0024_properties.proptest-regressions  rfc0024_properties.rs  rfc0037_structured_body.rs  rfc_internal.rs
crates/ourios-parquet/: Cargo.toml
crates/ourios-parquet/src/: audit_reader.rs  audit_record_batch.rs  audit_sink.rs  audit_writer.rs  compaction.rs  lib.rs  manifest.rs  partition.rs  promoted.rs  reader.rs  record_batch.rs  store.rs  writer.rs
crates/ourios-parquet/tests/: audit_round_trip.rs  audit_row_vs_path_validation.rs  buffer_and_put.rs  effective_timestamp.rs  no_body_dict.rs  partition_layout.rs  reader_compat.rs  rfc0013_object_store.rs  rfc0018_otlp_compliance.rs  rfc0021_arrow_upgrade.rs  rfc0022_promoted_columns.rs  rfc0024_properties.proptest-regressions  rfc0024_properties.rs  rfc0025_absent_body.rs  round_trip.rs  row_vs_path_validation.rs  schema_pin.rs  sizing.rs  zstd_level.rs
crates/ourios-querier/: Cargo.toml
crates/ourios-querier/src/: alias_store.rs  audit_scan.rs  compile.rs  drift.rs  lib.rs  log_row.rs  row_decode.rs  template_map.rs  template_registry.rs
crates/ourios-querier/tests/: acceptance.rs  boundary.rs  drift.rs  execution.rs  forward_compat.rs  manifest.rs  rfc0001_query_semantics.rs  rfc0001_time_preserved.rs  rfc0002_dsl.rs  rfc0005_13.rs  rfc0005_14_alias_derivation.rs  rfc0017_query_rows.rs  rfc0017_registry.rs  rfc0017_rendering.rs  rfc0018_otlp_compliance.rs  rfc0018_severity.rs  rfc0022_attr_columns.rs  rfc0024_properties.rs  rfc0025_rendering.rs  rfc0033_7_observability.rs
crates/ourios-server/: Cargo.toml
crates/ourios-server/src/: auth.rs  config.rs  lib.rs  main.rs  mcp.rs  querier.rs  receiver.rs
crates/ourios-server/tests/: rfc0003_16_served_binary.rs  rfc0008_10_recovery_driver.rs  rfc0013_6_wal_stays_local.rs  rfc0016_5_7_served_querier.rs  rfc0016_6_query_metrics.rs  rfc0016_query_endpoint.rs  rfc0019_storage_backend.rs  rfc0020_config_file.rs  rfc0026_auth.rs  rfc0038_1_mcp_span.rs
crates/ourios-telemetry/: Cargo.toml
crates/ourios-telemetry/src/: lib.rs
crates/ourios-testgen/: Cargo.toml
crates/ourios-testgen/src/: lib.rs  manifest.rs  strategies.rs
crates/ourios-wal/: Cargo.toml
crates/ourios-wal/src/: checkpoint.rs  frame.rs  lib.rs  segment.rs
crates/ourios-wal/tests/: append.rs  open.rs  recovery.rs  rfc0008_1_wal_before_ack.rs  rfc0008_2_crash_recovery.rs  rfc0008_3_recovery_o_n.rs  rfc0008_4_torn_writes.rs  rfc0008_5_corruption.rs  rfc0008_6_rotation.rs  rfc0008_7_checkpoint.rs  rfc0008_8_batched_fsync.rs  rfc0008_9_unflushed_bytes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: miner_roundtrip.rs  otlp_json.rs  otlp_protobuf.rs  wal_frame.rs
fuzz/seeds/miner_roundtrip/: access-line  error-line  login-line
(+235 files in other folders)
