[package]
name = "ourios-bench"
version = "0.0.0"
description = "RFC 0006 thesis-gate bench harness (A1 / C1 / C2). Drives ourios-miner + ourios-parquet against a corpus and computes the writer-side thesis-gate numbers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ourios-bench"
path = "src/main.rs"

[lib]
name = "ourios_bench"
path = "src/lib.rs"

[dependencies]
# Workspace crates the harness drives end-to-end. The bench is
# the only consumer that pulls all three on the same dep line
# (miner + parquet writer + the core OtlpLogRecord shape they
# share).
ourios-core = { path = "../ourios-core" }
ourios-miner = { path = "../ourios-miner" }
ourios-parquet = { path = "../ourios-parquet" }
# CLI argument parsing for the §3.7 flag surface. `clap` is the
# CNCF-Rust-observability standard (Vector, Quickwit,
# OpenObserve, GreptimeDB all use it) — the Rust analogue to
# Go's cobra. `derive` keeps the parser declarative; the binary
# is operator-facing, exactly where clap's `--help` / validation
# earn their weight. `ourios-server` will reuse it.
clap = { version = "4", features = ["derive"] }
# Serde + serde_json for the §3.6 ResultsFile JSON contract.
# `derive` gives the struct→JSON path; `std` covers the rest.
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# A1's ZSTD-19 reference codec (RFC 0006 §3.4.1 / §7). `zstd` is
# the ergonomic safe wrapper over `zstd-safe`; both bind the same
# bundled C library and `parquet`'s `zstd` feature already pulls
# it into the tree, so the version is pinned by `Cargo.lock` and
# A1 is reproducible across hosts without a system `zstd` binary.
zstd = "0.13"
# A1 writes the Parquet output bucket somewhere measurable; when
# `BenchConfig.bucket_dir` is `None`, `run` creates a scratch dir
# here and (unless `--keep-parquet`) cleans it up on exit. The
# integration tests reuse both `tempfile` (scratch corpora /
# buckets) and `zstd` (the RFC0006.1 test recomputes the
# reference byte count) — normal dependencies are visible to
# `tests/`, so no separate `[dev-dependencies]` mirror is needed.
tempfile = "3"

[lints]
workspace = true
