[package]
name = "ourios-bench"
version.workspace = true
description = "RFC 0006 thesis-gate bench harness (A1 / C1 / C2). Drives ourios-miner + ourios-parquet against a corpus and computes the writer-side thesis-gate numbers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ourios-bench"
path = "src/main.rs"

[lib]
name = "ourios_bench"
path = "src/lib.rs"

[dependencies]
# Workspace crates the harness drives end-to-end. The bench is
# the only consumer that pulls all three on the same dep line
# (miner + parquet writer + the core OtlpLogRecord shape they
# share).
ourios-core = { path = "../ourios-core" }
ourios-miner = { path = "../ourios-miner" }
ourios-parquet = { path = "../ourios-parquet" }
# OTLP proto types for the §3.1 OTLP/JSON corpus loader (see
# `src/corpus.rs`). `with-serde` (the OTLP/JSON spec's serde
# derives) is already enabled on this crate via `ourios-core`'s
# feature list; declaring the dep here just lets us name the
# types directly (Rust's resolver requires explicit
# declaration to import from an otherwise-transitive crate).
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "logs", "with-serde"] }
# CLI argument parsing for the §3.7 flag surface. `clap` is the
# CNCF-Rust-observability standard (Vector, Quickwit,
# OpenObserve, GreptimeDB all use it) — the Rust analogue to
# Go's cobra. `derive` keeps the parser declarative; the binary
# is operator-facing, exactly where clap's `--help` / validation
# earn their weight. `ourios-server` will reuse it.
clap = { version = "4", features = ["derive"] }
# Serde + serde_json for the §3.6 ResultsFile JSON contract.
# `derive` gives the struct→JSON path; `std` covers the rest.
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# A1's ZSTD-19 reference codec (RFC 0006 §3.4.1 / §7). `zstd` is
# the ergonomic safe wrapper over `zstd-safe`; both bind the same
# bundled C library and `parquet`'s `zstd` feature already pulls
# it into the tree, so the version is pinned by `Cargo.lock` and
# A1 is reproducible across hosts without a system `zstd` binary.
zstd = "0.13"
# A1 writes the Parquet output bucket somewhere measurable; when
# `BenchConfig.bucket_dir` is `None`, `run` creates a scratch dir
# here and (unless `--keep-parquet`) cleans it up on exit. The
# integration tests reuse both `tempfile` (scratch corpora /
# buckets) and `zstd` (the RFC0006.1 test recomputes the
# reference byte count) — normal dependencies are visible to
# `tests/`, so no separate `[dev-dependencies]` mirror is needed.
tempfile = "3"

[dev-dependencies]
# B2 latency bench (RFC 0007 §6 — supportive, non-gating evidence
# for the RFC0007.2 thesis gate that ourios-querier proves
# structurally). criterion gives warmup + a statistical median,
# which is what B2's "median latency" target wants; ourios-querier
# is the unit under test (and pulls DataFusion); a current-thread
# tokio runtime drives its async `Querier::run`.
criterion = "=0.8.2"
ourios-querier = { path = "../ourios-querier" }
tokio = { version = "=1.52.3", default-features = false, features = ["rt"] }
# RFC0008.3 recovery-non-amplification bench: times `Wal::replay`
# over N ∈ {1, 4, 16} segments. Supportive wall-clock evidence
# (the O(N) shape) mirroring b1/b2's role; the structural side is
# pinned by `ourios-wal`'s `rfc0008_3_*` integration tests.
ourios-wal = { path = "../ourios-wal" }
# Ingest write-path bench (CLAUDE.md §6.2 hot paths): drives the RFC 0014
# `ParquetRecordSink` for the WAL → Parquet half; the WAL half uses
# `ourios-wal` directly.
ourios-ingester = { path = "../ourios-ingester" }

[[bench]]
name = "b1"
harness = false

[[bench]]
name = "ingest_write_path"
harness = false

[[bench]]
name = "b2"
harness = false

[[bench]]
name = "recovery"
harness = false

[[bench]]
name = "compaction"
harness = false

[lints]
workspace = true
