[package]
name = "ourios-bench"
version.workspace = true
description = "RFC 0006 thesis-gate bench harness (A1 / C1 / C2). Drives ourios-miner + ourios-parquet against a corpus and computes the writer-side thesis-gate numbers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "ourios-bench"
path = "src/main.rs"

[lib]
name = "ourios_bench"
path = "src/lib.rs"

[dependencies]
# Miner tunables (RFC 0004), their own crate so config edits recompile narrowly (RFC 0028).
ourios-config = { path = "../ourios-config" }
# Workspace crates the harness drives end-to-end. The bench is
# the only consumer that pulls all three on the same dep line
# (miner + parquet writer + the core OtlpLogRecord shape they
# share).
ourios-core = { path = "../ourios-core" }
ourios-miner = { path = "../ourios-miner" }
ourios-parquet = { path = "../ourios-parquet" }
# OTLP proto types for the §3.1 OTLP/JSON corpus loader (see
# `src/corpus.rs`). `with-serde` (the OTLP/JSON spec's serde
# derives) is already enabled on this crate via `ourios-core`'s
# feature list; declaring the dep here just lets us name the
# types directly (Rust's resolver requires explicit
# declaration to import from an otherwise-transitive crate).
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "logs", "with-serde"] }
# The RFC 0024 §3.1 calibration accumulator + manifest types the
# `--calibrate` pass folds a corpus into. A regular dependency (the
# binary path uses it), which pulls `proptest` into this crate's
# build — acceptable here and only here: the bench harness is a
# workspace leaf no production crate depends on, so the RFC 0024
# "no production crate grows a proptest dependency" line holds.
ourios-testgen = { path = "../ourios-testgen" }
# CLI argument parsing for the §3.7 flag surface. `clap` is the
# CNCF-Rust-observability standard (Vector, Quickwit,
# OpenObserve, GreptimeDB all use it) — the Rust analogue to
# Go's cobra. `derive` keeps the parser declarative; the binary
# is operator-facing, exactly where clap's `--help` / validation
# earn their weight. `ourios-server` will reuse it.
clap = { version = "4", features = ["derive"] }
# Serde + serde_json for the §3.6 ResultsFile JSON contract.
# `derive` gives the struct→JSON path; `std` covers the rest.
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# A1's ZSTD-19 reference codec (RFC 0006 §3.4.1 / §7). `zstd` is
# the ergonomic safe wrapper over `zstd-safe`; both bind the same
# bundled C library and `parquet`'s `zstd` feature already pulls
# it into the tree, so the version is pinned by `Cargo.lock` and
# A1 is reproducible across hosts without a system `zstd` binary.
zstd = "0.13"
# A1 writes the Parquet output bucket somewhere measurable; when
# `BenchConfig.bucket_dir` is `None`, `run` creates a scratch dir
# here and (unless `--keep-parquet`) cleans it up on exit. The
# integration tests reuse both `tempfile` (scratch corpora /
# buckets) and `zstd` (the RFC0006.1 test recomputes the
# reference byte count) — normal dependencies are visible to
# `tests/`, so no separate `[dev-dependencies]` mirror is needed.
tempfile = "3"
# RFC 0031 comparative harness. The Ourios-side L-gate extraction
# (`comparative::ourios_query_lines`) runs the querier **in-process**: the
# comparative harness is a lib gate that produces `docs/benchmarks.md` §9
# numbers (like a1/c1/c2), and producing comparative numbers requires
# querying, so the querier belongs in the lib — not just tests. A
# current-thread tokio runtime drives the async `Querier::run`. (Both were
# dev-only while the only in-process queries lived in the B2 criterion
# bench, which still uses them via these regular deps.)
ourios-querier = { path = "../ourios-querier" }
# The RFC 0009 D1/D2 soak harness (`soak`) needs the multi-thread
# runtime: the group-commit coordinator offloads its fsync via
# `spawn_blocking`, which a current-thread runtime would serialize
# behind the load loop. `time` paces the load, `sync` bounds in-flight
# batches (Semaphore) + carries the sampler stop signal (watch), and
# `macros` gives the sampler's tick-vs-stop `select!`.
tokio = { version = "=1.53.0", default-features = false, features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
# The soak harness drives the real ingest path in-process: WAL →
# group-commit coordinator → `IngestPipeline` → record sink, with the
# compactor's `run_sweep` driven manually on the synthetic cadence.
# Regular (not dev) deps since the `soak` subcommand ships in the bin;
# the criterion benches use them through these same lines.
ourios-wal = { path = "../ourios-wal" }
ourios-ingester = { path = "../ourios-ingester" }
# RFC 0031 L4 (frequency-aggregation) pair: decodes the querier's RFC 3339
# `bucket(width)` group-key rendering back to Unix nanoseconds for the
# `AggKey` comparison against Loki. Same version `ourios-querier` pins.
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
# RFC0031.1 Loki container integration (CI-only, like the dex-oidc job):
# testcontainers spins grafana/loki, reqwest pushes the OTLP fixture and
# runs the LogQL query, prost encodes the OTLP protobuf payload (0.14 is
# the generation opentelemetry-proto 0.32's tonic messages implement),
# and the tokio dev-features give the container half an async runtime
# (the Ourios half stays sync — `ourios_query_lines` owns its runtime).
testcontainers-modules = "=0.15.0"
reqwest = { version = "=0.12.28", default-features = false }
prost = "=0.14.4"
# Refcounted request bodies for the corpus replay's retrying pusher (a
# per-attempt Vec clone would copy ~2 MB per push across thousands).
bytes = { version = "=1.12.1", default-features = false }
tokio = { version = "=1.53.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
# Footer-level schema assertion for the RFC 0022 promoted-service parity
# tests: opens a comparative-store file's Parquet footer directly to
# check the promoted column the writer declared. Same major as the
# workspace arrow/parquet tree, so Cargo.lock pins one copy.
parquet = { version = "=58.3.0", default-features = false, features = ["arrow"] }
# RFC0024.2 draws calibrated records through a fixed-seed
# `TestRunner` (the strategies come from `ourios-testgen`, already a
# regular dependency above).
proptest = "=1.11.0"
# B2 latency bench (RFC 0007 §6 — supportive, non-gating evidence
# for the RFC0007.2 thesis gate that ourios-querier proves
# structurally). criterion gives warmup + a statistical median,
# which is what B2's "median latency" target wants; ourios-querier (a
# regular dependency above) is the unit under test.
criterion = "=0.8.2"
# The RFC 0036 §9.29 real-corpus measurement (tests/rfc0036_realcorpus.rs,
# `#[ignore]`d) reads a subset of the gitignored `logs.jsonl.gz` v8 capture;
# flate2 streams the gzip so the measurement doesn't need the 2.9 GB
# uncompressed sidecar. Already in the workspace lock tree (transitive), so
# no new vendored crate.
flate2 = "=1.1.9"

[[bench]]
name = "b1"
harness = false

[[bench]]
name = "ingest_write_path"
harness = false

[[bench]]
name = "b2"
harness = false

[[bench]]
name = "recovery"
harness = false

[[bench]]
name = "compaction"
harness = false

[lints]
workspace = true
