[package]
name = "ourios-core"
version = "0.0.0"
description = "Foundational types for Ourios."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# OTLP proto types (RFC 0003 §4.1 pins this crate as the wire-stack
# default; carrying it on `OtlpLogRecord` keeps the in-memory record
# faithful to the spec — no hand-rolled re-implementation that could
# drift from the OTel `AnyValue`/`KeyValue` semantics).
# `with-serde` adds the OTLP/JSON spec's Serialize/Deserialize derives
# (camelCase fields, base64-encoded bytes, …) to the proto types so the
# bench corpus loader can read OTel File Exporter output (one
# `LogsData` per JSONL line) via `serde_json::from_str::<LogsData>()`
# — the same pattern rotel's OTLP HTTP receiver uses on
# `ExportLogsServiceRequest`. Keeps OTLP-JSON parsing as one feature
# flag, not a hand-rolled struct that could drift from the spec.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "logs", "with-serde"] }
# Hash function for `AuditEvent::triggering_line_hash` per RFC 0001
# §6.4. Truncated blake3 (first 16 bytes) joins audit events back to
# the data record(s) that triggered them in the §6.7 drift query.
blake3 = { version = "1", default-features = false }
# Drives the RFC 0005 §3.3 OTLP-canonical-JSON encoders / decoders
# (`otlp::canonical`). Pairs with `opentelemetry-proto`'s `with-serde`
# derives so the spec mapping stays single-sourced through the proto
# crate.
serde_json = { version = "1", default-features = false, features = ["std"] }

[lints]
workspace = true
