[package]
name = "ourios-core"
version.workspace = true
description = "Foundational types for Ourios."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# OTLP proto types (RFC 0003 ┬¦4.1 pins this crate as the wire-stack
# default; carrying it on `OtlpLogRecord` keeps the in-memory record
# faithful to the spec ŌĆö no hand-rolled re-implementation that could
# drift from the OTel `AnyValue`/`KeyValue` semantics).
# `with-serde` adds the OTLP/JSON spec's Serialize/Deserialize derives
# (camelCase fields, base64-encoded bytes, ŌĆ”) to the proto types so the
# bench corpus loader can read OTel File Exporter output (one
# `LogsData` per JSONL line) via `serde_json::from_str::<LogsData>()`
# ŌĆö the same pattern rotel's OTLP HTTP receiver uses on
# `ExportLogsServiceRequest`. Keeps OTLP-JSON parsing as one feature
# flag, not a hand-rolled struct that could drift from the spec.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "logs", "with-serde"] }
# Hash function for `AuditEvent::triggering_line_hash` per RFC 0001
# ┬¦6.4. Truncated blake3 (first 16 bytes) joins audit events back to
# the data record(s) that triggered them in the ┬¦6.7 drift query.
blake3 = { version = "1", default-features = false }
# Constant-time bearer-token comparison for the RFC 0026 token store (┬¦6).
# Already in the dep tree transitively (rustls), so no new cargo-deny surface.
subtle = { version = "2.6", default-features = false }
# Drives the RFC 0005 ┬¦3.3 Ourios-canonical-JSON encoders / decoders
# (`otlp::canonical`). Pairs with `opentelemetry-proto`'s `with-serde`
# derives so the spec mapping stays single-sourced through the proto
# crate. `float_roundtrip` is load-bearing, not an optimisation
# preference: serde_json's default float parsing is approximate and
# drifts `decode(encode(x))` by 1ŌĆō2 ULP for ~12% of arbitrary finite
# f64 (#130) ŌĆö RFC 0001 ┬¦6.1's `stored_bytes Ōåö AnyValue` faithfulness
# guarantee requires the correctly-rounded parser.
serde_json = { version = "1", default-features = false, features = ["std", "float_roundtrip"] }
# The OTel metrics **API** only (RFC 0001 ┬¦6.8 "Export architecture":
# library crates depend on the lightweight API and resolve instruments
# through `global::meter`; the heavy SDK + OTLP exporter live in
# `ourios-telemetry`). Drives the alias map's
# `ourios.miner.alias.assertions` / `ourios.miner.alias.retractions`
# counters (┬¦6.8 telemetry table).
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
# Generated dotted-`ourios.*` semconv name constants for the alias
# counters' metric names + `ourios.tenant` attribute key (┬¦6.8).
# Zero-dep leaf crate.
ourios-semconv = { path = "../ourios-semconv" }

[dev-dependencies]
# `init_in_memory` collects the alias counters' exported metric stream
# through an in-memory reader (no OTLP endpoint) in the ┬¦6.8 telemetry
# unit test ŌĆö same pattern as the compaction-metrics test.
ourios-telemetry = { path = "../ourios-telemetry", features = ["testing"] }
# Property test for the canonical encoding's exact finite-f64
# round-trip (#130).
proptest = "=1.11.0"
tokio = { version = "=1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
opentelemetry_sdk = { version = "=0.32.1", default-features = false, features = ["metrics", "testing"] }

[lints]
workspace = true
