[package]
name = "ourios-ingester"
version = "0.0.0"
description = "Ourios ingester role — OTLP receiver (RFC 0003), WAL-before-ack (RFC 0008), and the background compaction runner (RFC 0009)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ourios_ingester"
path = "src/lib.rs"

[dependencies]
# Shared types (TenantId, config) for the ingest path.
ourios-core = { path = "../ourios-core" }
# The ingest pipeline's WAL-before-ack durability (RFC 0003 §6.5 /
# CLAUDE.md §3.4): append the OtlpBatch frame + fsync before acking.
ourios-wal = { path = "../ourios-wal" }
# The Drain-derived template miner the pipeline hands per-tenant records
# to after they are durable (RFC 0003 §6.5 step 5).
ourios-miner = { path = "../ourios-miner" }
# The compaction runner drives ourios-parquet's planner + compactor
# (RFC 0009 §3.2: compaction is hosted in the ingester role) and uses
# its tenant-dir percent codec to enumerate the store.
ourios-parquet = { path = "../ourios-parquet" }
# Async runtime for the background compaction loop: `time` for the
# interval timer, `rt` for `spawn_blocking` (compaction is blocking
# filesystem/Parquet work), `macros` for `#[tokio::main]`/tests.
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros"] }
# Telemetry: the lightweight OTel metrics API only (RFC 0001 §6.8 — the
# heavy SDK/OTLP live in ourios-telemetry; library crates resolve
# instruments through the global meter).
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
# Generated metric/attribute name constants (RFC 0009 §3.6); a leaf,
# zero-dep crate.
ourios-semconv = { path = "../ourios-semconv" }
# OTLP wire decode (RFC 0003 §6.2). Same crate + version + features the
# rest of the workspace pins (ourios-core, ourios-bench): the receiver
# decodes the gRPC / HTTP `application/x-protobuf` payload into the
# `ExportLogsServiceRequest` these generated types define. `with-serde`
# carries the OTLP/JSON mapping the `application/json` path uses
# (RFC0003.6, lands next). Live gRPC/HTTP listeners (`tonic`/`axum`) are
# a later transport slice — this slice is the pure decode layer.
# `gen-tonic` (not just `-messages`) for the `logs_service_server`
# `LogsService` trait the gRPC listener implements (RFC0003.11/.15).
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "logs", "with-serde"] }
# `prost::Message::{decode, encode_to_vec}` for the protobuf payload.
# `std` is explicit (not relied on via workspace feature unification):
# `DecodeError::source` returns `prost::DecodeError` as `&dyn
# std::error::Error`, which only impls `Error` under prost's `std`.
prost = { version = "0.14", default-features = false, features = ["std"] }
# OTLP/JSON decode (RFC0003.6) via the proto types' `with-serde`
# `Deserialize` impls — the `application/json` transport body is an
# `ExportLogsServiceRequest` in the proto3-JSON mapping.
serde_json = { version = "1", default-features = false, features = ["std"] }
# HTTP transport (RFC 0003 §6.2): the OTLP/HTTP `/v1/logs` listener.
# `tokio` + `http1` so the router can be served; the handler + extractors
# (`State`, `Bytes`, `HeaderMap`) are core. On hyper 1.x, already in the
# tree.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
# gzip decode for OTLP/HTTP `Content-Encoding: gzip` (an OTLP MUST,
# RFC0003.13). Pure-Rust backend — no zlib C dependency (CLAUDE.md).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# gRPC transport (RFC 0003 §6.2): the `LogsService` server. `codegen` for
# the generated `#[async_trait]` + `Request`/`Response`/`Status`; no
# socket transport is stood up in this slice (the service is exercised
# in-process).
tonic = { version = "0.14", default-features = false, features = ["codegen"] }

[dev-dependencies]
tempfile = "3"
# Drive the axum `Router` in-process (`ServiceExt::oneshot`) for the
# HTTP-transport acceptance tests — no real socket.
tower = { version = "0.5", default-features = false, features = ["util"] }
# Proptest strategy over the OTLP proto value space for the
# wire-decode equivalence scenarios (RFC0003.5/.6 per §8).
proptest = "1"
# Stand up an in-memory MeterProvider to assert the compaction metric
# stream; `testing` exposes `init_in_memory`.
ourios-telemetry = { path = "../ourios-telemetry", features = ["testing"] }
# The SDK data types (`ResourceMetrics` etc.) the metrics test reads.
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["metrics", "testing"] }
# The metrics test collects via the in-memory reader's periodic-export
# path, which needs a multi-thread runtime.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "time", "macros"] }

[lints]
workspace = true
